--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
           <h1 class="herotext">
             Enhance the capabilities of your tech team with <span id="colortexthero">Twixia.</span> 
           </h1>
+          <div>
+            <div class="slideimg mt-4">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class=" w-100" src="assests/Rectangle 8 (1).svg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class=" w-100" src="assests/Rectangle 8 (2).svg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class=" w-100" src="assests/Rectangle 8 (3).svg" alt="Third slide">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="slidedown col-8 bg-black ">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem similique eligendi tenetur doloremque aliquam nemo odit fugit hic velit reprehenderit.
+              </div>
+              <div class="slidedown col-4 bg-primary">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit earum maiores, vel sunt inventore vitae saepe magnam dicta veritatis sequi?
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-4 ">
           <div class="container">
@@ -88,7 +113,9 @@
  
   
 
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
