--- a/index.html
+++ b/index.html
@@ -83,15 +83,25 @@
           </p>
          </div>
       </div>
-      <div>
-        <div class="container consec21 mt-3">
-          <div class="row">
-            <div class="col-6 ">
-              <img src="assests/Rectangle 30.svg" alt="" >
+      <div class="container mt-3 con-sec2">
+        <div class="row align-items-center m-3">
+          <!-- Left Side with Image and Overlay -->
+          <div class="col-md-6 position-relative">
+            <img src="assests/Rectangle 30.svg" alt="Twixia boost" class="img-fluid rounded">
+            <div class="overlay-content position-absolute top-0 start-0 h-100 w-100 d-flex align-items-end p-4" >
+              <p class="text-white mb-0">
+                Twixia boosted Xunison with a new R&D center and improved Benchmark Minerals with advanced analytics.
+              </p>
             </div>
-            <div class="col-4 m-5 bg-primary justify-content-end">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quisquam enim libero quo autem repudiandae sint fugiat quae eos, cupiditate dolore saepe quasi rerum cum quos reprehenderit? Possimus, tempora accusantium.
-            </div>
+          </div>
+      
+          <!-- Right Side Content -->
+          <div class="col-md-6">
+            <h2 class="h3 text-white">The highly carted business and industries with a big impact.</h2>
+            <p class="text-white">
+              At Twixia, we match you with top-tier remote developers tailored to your needs. Our services include full-spectrum remote team management, from seamless integration.
+            </p>
+            <a href="#" class="btn btn-light mt-3">Request proposal →</a>
           </div>
         </div>
       </div>
